# SmartDoorbell_ESP32CAM

./: .gitignore  README.md  doorbell_dashboard.py  doorbell_server.py  requirements.txt
OfflineVersion/: requirements.txt
OfflineVersion/local_ai_cam/: local_ai_cam.ino
OfflineVersion/local_ai_dashboard/: local_ai_dashboard.py
OfflineVersion2/dashboard/: index.html
OfflineVersion2/final_firmware/: CMakeLists.txt  sdkconfig.defaults
OfflineVersion2/final_firmware/main/: CMakeLists.txt  (+2 more)
OfflineVersion2/server/: main.py  requirements.txt
OfflineVersion3/: README.md
OfflineVersion3/final_firmware/05_ml_server_brain_v3/main/: CMakeLists.txt  main.cpp
OfflineVersion3/tests/: test_image.py  test_ml.py
Version1/: doorbell_dashboard.py
Version1/CPP_Codes/: Doorbell_Indoor_Display.ino  Doorbell_Indoor_Display_RGB.ino  Doorbell_Outdoor_Cam.ino
Version2/: BUILD_GUIDE.txt  README.md  doorbell_dashboard2.py  doorbell_server2.py
Version2/doorbell_cam2/: doorbell_cam2.ino
Version2/doorbell_display2/: doorbell_display2.ino
Version2_1/: doorbell_dashboard2_1.py  doorbell_server2_1.py
Version2_1/doorbell_cam2_1/: doorbell_cam2_1.ino
Version2_1/doorbell_display2_1/: doorbell_display2_1.ino
Version2_2/Doorbell_Indoor_Display_RGB_Video/: Doorbell_Indoor_Display_RGB_Video.ino
Version2_2/camera_idf/: CMakeLists.txt  sdkconfig.defaults
Version2_2/dashboard/: doorbell_dashboard_fastapi.py
Version2_2/display_idf/: sdkconfig.defaults
Version2_2/display_idf/main/: CMakeLists.txt  idf_component.yml  main.c
Version2_2/server/: doorbell_server_fastapi.py
(+60 files in other folders)
